--- a/src/main/resources/css/parametres.css
+++ b/src/main/resources/css/parametres.css
@@ -70,6 +70,11 @@
 	-fx-font-family:"Century Gothic";
 	
 }
+.petitVide{
+		-fx-min-height: 10px;
+	-fx-min-width:10px;
+}
+
 
 /*HBox{
     -fx-border-style: dashed;
